--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.4",
+    "@react-navigation/native-stack": "^7.0.4",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
     "react-native-svg": "^15.9.0"
   },
   "devDependencies": {
